PORTAL-2349: preserve overall cookie header structure while searching for the session cookie